--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "author": "",
   "type": "module",
   "scripts": {
+    "start": "node dist/index.js",
+    "build": "tsc && tsc-alias",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
